src/Test/ElementServices/FeatureTests/TestData/bvt/parser/Errors/Error_SetterInvalidTypeNameForProperty.xaml
<Page xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
<!--
/*******************************************************************
 * Purpose: Verifies parse exception when a setter is used to apply an inappropriate value to a property. In this case a Button to Panel.Background.
 * Contributors: Microsoft
 *
 
  
 * Revision:         $Revision: 2 $
 
 * Filename:         $Source: //depot/devdiv/Orcas/SP/feature/WPF/wpf/Test/ElementServices/FeatureTests/TestData/bvt/parser/Errors/Error_SetterInvalidTypeNameForProperty.xaml $
 ********************************************************************/
-->
<StackPanel
    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
>
    <StackPanel.Resources>
    <Style x:Key="foo" TargetType="{x:Type Button}">
        <Setter Property="Panel.Background">
            
                <Button />
            
        </Setter>
    </Style>
    </StackPanel.Resources>
    
    <Button Style="{DynamicResource foo}" />
    
</StackPanel>
</Page>
